// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPane correctly applies the theme context className 1`] = `
<div
  aria-disabled={false}
  aria-label="Default"
  aria-selected={false}
  className="tab is-text-only orion-fusion-theme"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    Object {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Default"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-8daa3334-233e-4425-b381-eeab5e6b9603"
      text="Terra.tabs.hint.removable"
    />
    <span
      className="label"
    >
      Default
    </span>
  </div>
</div>
`;

exports[`TabPane should render a default component with label 1`] = `
<div
  aria-disabled={false}
  aria-label="Default"
  aria-selected={false}
  className="tab is-text-only"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    Object {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Default"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-9790a21b-3169-457d-909a-516a7d794fa0"
      text="Terra.tabs.hint.removable"
    />
    <span
      className="label"
    >
      Default
    </span>
  </div>
</div>
`;

exports[`TabPane should render with a custom display when provided 1`] = `
<div
  aria-disabled={false}
  aria-label="Label"
  aria-selected={false}
  className="tab is-text-only"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    Object {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Label"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-fab744f2-a08c-4cda-87d7-8167a2c332f4"
      text="Terra.tabs.hint.removable"
    />
    <div>
      Custom Display
    </div>
  </div>
</div>
`;

exports[`TabPane should render with icon and label 1`] = `
<div
  aria-disabled={false}
  aria-label="Label"
  aria-selected={false}
  className="tab"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    Object {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Label"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-79f584a8-f221-49ed-89be-bfaefe6904c9"
      text="Terra.tabs.hint.removable"
    />
    <div>
      Fake icon
    </div>
    <span
      className="label"
    >
      Label
    </span>
  </div>
</div>
`;

exports[`TabPane should render with icon only when indicated 1`] = `
<div
  aria-disabled={false}
  aria-label="Label"
  aria-selected={false}
  className="tab is-icon-only"
  data-focus-styles-enabled={true}
  data-terra-tabs-show-focus-styles={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="tab"
  style={
    Object {
      "zIndex": undefined,
    }
  }
  tabIndex={-1}
  title="Label"
>
  <div
    className="inner"
  >
    <VisuallyHiddenText
      aria-hidden={true}
      id="terra-tab-delete-pane-response-f6a764bd-c171-4207-a075-62a917cd7072"
      text="Terra.tabs.hint.removable"
    />
    <div>
      Fake icon
    </div>
  </div>
</div>
`;
